upd this to last

--- a/Manufacture.WebApp/Components/Layout/NavMenu.razor
+++ b/Manufacture.WebApp/Components/Layout/NavMenu.razor
@@ -9,9 +9,9 @@
                 <RadzenPanelMenuItem Text="Dashboard" Icon="dashboard" Path="dashboard"/>
                 <RadzenPanelMenuItem Text="Пользователи" Icon="group" Path="users"/>
                 <RadzenPanelMenuItem Text="Роли" Icon="add_moderator" Path="roles"/>
-                <RadzenPanelMenuItem Text="Продукция на складе" Icon="cooking" Path="products"/>
+                <RadzenPanelMenuItem Text="Продукция на складе" Icon="shelves" Path="products"/>
                 <RadzenPanelMenuItem Text="Продукция для заказа" Icon="view_list" Path="orderproduct"/>
-                <RadzenPanelMenuItem Text="Заказы" Icon="orders" Path="orders"/>
+                <RadzenPanelMenuItem Text="Заказы" Icon="all_inbox" Path="orders"/>
                 <RadzenPanelMenuItem Text="Материалы" Icon="inventory" Path="materials"/>
                 <RadzenPanelMenuItem Text="Личный кабинет" Icon="account_box" Path="account/manage"/>
             </Authorized>
